# MercadoLibre

./: .coveragerc  .gitignore  .python-version  README.md  ejercicio  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
data/processed/: boston_clean.csv
deployment/: Dockerfile  azure_build.yaml  docker-compose.yml
deployment/pipelines/: build.yml  deploy.yml
models/: latest.txt  model_20260508_114959.json  model_20260508_144106.json  model_20260509_110028.json  model_20260509_111458.joblib  model_20260509_111458.json  model_20260509_111602.json  model_20260509_111846.json  model_20260509_112019.json  model_20260509_112823.json  model_20260509_113141.json  model_20260509_113449.json
scripts/: 01_prepare_data.py
src/boston_housing/: server.py
src/boston_housing/application/: app.py
src/boston_housing/application/config/: config.py  container.py
src/boston_housing/domain/usecase/: evaluate_usecase.py  predict_usecase.py  preprocess_usecase.py  prompt_usecase.py  train_usecase.py
src/boston_housing/infrastructure/driven_adapters/: csv_repository.py  (+1 more)
tests/: test_app.py
tests/test_domain/usecase/: test_evaluate_usecase.py  test_paper_usecase.py  test_predict_usecase.py  test_preprocess_usecase.py  test_prompt_usecase.py  test_resource_usecase.py  test_train_usecase.py
tests/test_infrastructure/driven_adapters/: test_arxiv_papers_adapter.py  test_local_files_adapter.py  test_prompt_adapter.py
tests/test_infrastructure/entry_points/: test_prompts.py  test_resources.py  test_routes.py  test_tools.py
(+8 files in other folders)
