[project]
name = "mcp-server-papers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "dependency-injector>=4.47.1",
    "mcp>=1.9.4",
    "fastmcp==2.11.1",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[project.scripts]
mcp-server-papers = "mcp_server_papers.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
    "*/bancolombia/*",
    "*/tests/*",
    "/notebooks/*"
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.pytest.ini_options]
addopts = "-x --cov=mcp_server_papers --junitxml=coverage.xml"
testpaths = [
    "tests"
]

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]

[tool.hatch.build]
sources = ["src"]

